feat: 增加修改白板信息的接口
